[tool.poetry]
name = "linux-notes"
version = "0.1.0"
description = "Personal Notes on Linux OS"
authors = ["Marcello Lamonaca <marcello@lamonaca.eu>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
mkdocs = "^1.5.1"
mkdocs-material = "^9.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
