[project]
name = "linux-notes"
version = "0.1.0"
description = "Personal Notes on Linux OS"
readme = "README.md"
license = "MIT"
authors = ["Marcello Lamonaca <marcello@lamonaca.eu>"]
requires-python = ">=3.12"
dependencies = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.5.34",
    "pillow>=10.4.0",
    "cairosvg>=2.7.1",
]
